--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
         <div class="container">
             <div class="left-star">
-                <img src="/figma_landingPage-7/img/Rating.png" alt="" width="120px" height="20px">
+                <img src="./figma_landingPage-7/img/Rating.png" alt="" width="120px" height="20px">
                 <p class="left-star-text">
                     “OMG! I cannot believe that I have got a brand new landing page after 
                     getting Omega. It was super easy to edit and publish. Everyone should try it!”
@@ -59,7 +59,7 @@
                 <p class="left-star-author">Jonathan Taylor</p>
             </div>
             <div class="right-star">
-                <img src="/figma_landingPage-7/img/Rating.png" alt="" width="120px" height="20px">
+                <img src="./figma_landingPage-7/img/Rating.png" alt="" width="120px" height="20px">
                 <p class="right-star-text">
                     “You made it so simple. My new site is so much faster and easier to work with 
                     than my old site. I just choose the page, make the change and click save.”
